# libopencm3

./: .gitignore  meson.build
include/libopencm3/stm32/f4/: nvic.h
ld/: linker.ld.S
lib/cm3/: vector.c
lib/stm32/f4/: vector_nvic.c
mk/: gen-ldscript.mk
